[project]
name = "comfyui-image-matting"
description = "This node improves the quality of the image mask. more suitable for image composite matting"
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-contrib-python>=4.7.0.72", "opencv-contrib-python-headless>=4.7.0.72", "opencv-python>=4.7.0.72", "opencv-python-headless>=4.7.0.72", "transformers @ git+https://github.com/huggingface/transformers"]

[project.urls]
Repository = "https://github.com/hackkhai/ComfyUI-Image-Matting"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Image-Matting"
Icon = ""
